# internal/contentful-management-go/oas_server_gen.go
@@ -212,6 +212,12 @@ type Handler interface {
 	//
 	// GET /spaces/{space_id}/environments/{environment_id}/content_types/{content_type_id}/editor_interface
 	GetEditorInterface(ctx context.Context, params GetEditorInterfaceParams) (GetEditorInterfaceRes, error)
+	// GetEntries implements getEntries operation.
+	//
+	// Get entries.
+	//
+	// GET /spaces/{space_id}/environments/{environment_id}/entries
+	GetEntries(ctx context.Context, params GetEntriesParams) (GetEntriesRes, error)
 	// GetEntry implements getEntry operation.
 	//
 	// Get a single entry.
